force-app/main/default/objects/Class__c/fields/Class_Leader__c.field-meta.xml
<CustomField>
    <fullName>Class_Leader__c</fullName>
    <description>Full Name of the Class Teacher</description>
    <inlineHelpText>Full Name of the Class Teacher</inlineHelpText>
    <label>Class Leader</label>
    <length>50</length>
    <type>Text</type>
</CustomField>