force-app/main/default/objects/Class__c/fields/Class_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Class_Teacher__c</fullName>
    <description>Full Name of Class Teacher</description>
    <inlineHelpText>Full Name of Class Teacher</inlineHelpText>
    <label>Class Teacher</label>
    <length>50</length>
    <type>Text</type>
</CustomField>