force-app/main/default/objects/Class__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Section Letter</description>
    <label>Section</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>