force-app/main/default/objects/Class__c/fields/Total_No_Of_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Students__c</fullName>
    <description>Total No of Students in the Class</description>
    <inlineHelpText>Total No of Students in the Class</inlineHelpText>
    <label>Total No. Of Students</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>